SONARIAC-1364 Adapt syntax to Java 17 (#1192)