@@ -19,11 +19,6 @@
  */
 package org.sonar.iac.arm.checkdsl;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import javax.annotation.Nullable;
 import org.sonar.iac.arm.tree.ArmTreeUtils;
 import org.sonar.iac.arm.tree.api.ArrayExpression;
 import org.sonar.iac.arm.tree.api.ObjectExpression;
@@ -33,6 +28,11 @@ import org.sonar.iac.common.api.tree.HasProperties;
 import org.sonar.iac.common.api.tree.Tree;
 import org.sonar.iac.common.checkdsl.ContextualTree;
 import org.sonar.iac.common.checks.PropertyUtils;
+
+import javax.annotation.Nullable;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 public abstract class ContextualMap<S extends ContextualMap<S, T>, T extends HasProperties & Tree> extends ContextualTree<ContextualMap<S, T>, T> {
 
@@ -103,7 +103,7 @@ public abstract class ContextualMap<S extends ContextualMap<S, T>, T extends Has
     return ArmTreeUtils.resolveProperties(path, tree).stream()
       .filter(ObjectExpression.class::isInstance)
       .map(expression -> ContextualObject.fromPresent(ctx, (ObjectExpression) expression, name, null))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   /**
