@@ -19,10 +19,6 @@
  */
 package org.sonar.iac.terraform.checks;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import org.sonar.check.Rule;
 import org.sonar.iac.common.api.checks.SecondaryLocation;
 import org.sonar.iac.common.api.tree.Tree;
@@ -33,6 +29,10 @@ import org.sonar.iac.common.checks.policy.Policy.Statement;
 import org.sonar.iac.terraform.api.tree.TupleTree;
 import org.sonar.iac.terraform.checks.utils.PolicyUtils;
 import org.sonar.iac.terraform.symbols.ResourceSymbol;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
 
 @Rule(key = "S6317")
 public class PrivilegeEscalationCheck extends AbstractNewResourceCheck {
@@ -53,8 +53,8 @@ public class PrivilegeEscalationCheck extends AbstractNewResourceCheck {
   private static void checkPrivilegeEscalation(ResourceSymbol resourceSymbol, Policy policy) {
     for (Statement statement : policy.statement()) {
       Optional<Tree> action = statement.action();
-      if (action.isPresent() && action.get() instanceof TupleTree) {
-        List<Tree> actionTrees = ((TupleTree) action.get()).elements().trees().stream().map(Tree.class::cast).collect(Collectors.toList());
+      if (action.isPresent() && action.get()instanceof TupleTree tuple) {
+        List<Tree> actionTrees = tuple.elements().trees().stream().map(Tree.class::cast).toList();
         Optional<PrivilegeEscalationVector> vectorOpt = PrivilegeEscalationVector.getStatementEscalationVector(statement, actionTrees);
         if (vectorOpt.isPresent()) {
           PrivilegeEscalationVector vector = vectorOpt.get();
