@@ -19,10 +19,6 @@
  */
 package org.sonar.iac.terraform.checks.gcp;
 
-import java.util.List;
-import java.util.Set;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
 import org.sonar.iac.common.api.checks.SecondaryLocation;
@@ -30,6 +26,10 @@ import org.sonar.iac.common.checks.TextUtils;
 import org.sonar.iac.terraform.api.tree.ExpressionTree;
 import org.sonar.iac.terraform.checks.AbstractNewResourceCheck;
 import org.sonar.iac.terraform.symbols.ListSymbol;
+
+import java.util.List;
+import java.util.Set;
+import java.util.function.Predicate;
 
 @Rule(key = "S6406")
 public class ExcessivePermissionsCheck extends AbstractNewResourceCheck {
@@ -60,11 +60,11 @@ public class ExcessivePermissionsCheck extends AbstractNewResourceCheck {
         ListSymbol permissions = resource.list("permissions");
         List<ExpressionTree> sensitivePermissions = resource.list("permissions")
           .getItemIf(isSensitivePermission())
-          .collect(Collectors.toList());
+          .toList();
 
         if (sensitivePermissions.size() > max) {
           List<SecondaryLocation> secondaries = sensitivePermissions.stream()
-            .map(p -> new SecondaryLocation(p, SECONDARY_MESSAGE)).collect(Collectors.toList());
+            .map(p -> new SecondaryLocation(p, SECONDARY_MESSAGE)).toList();
           permissions.report(String.format(MESSAGE, max), secondaries);
         }
       });
